2014-06-28  Radu Stavila  <stavila@adobe.com>

        [New Multicolumn] Elements with rounded corners and overflow:hidden do not properly clip their content
        https://bugs.webkit.org/show_bug.cgi?id=133941

        Reviewed by Darin Adler.

        Added test for multicol element inside an element with overflow:hidden and border radius.

        * fast/multicol/newmulticol/multicol-clip-rounded-corners-expected.html: Added.
        * fast/multicol/newmulticol/multicol-clip-rounded-corners.html: Added.

2014-06-27  Zalan Bujtas  <zalan@apple.com>

        Subpixel rendering: Background clipping with subpixel behaves differently when composited.
        https://bugs.webkit.org/show_bug.cgi?id=134422

        Reviewed by Simon Fraser.

        Adjust cliprect with the subpixel offset from the graphics layer the same way we do it for painting.
        It ensures that cliprect starts from the right position when graphics layer is not on the same
        coordinates as the associated render layer.

        * compositing/hidpi-compositing-layer-with-subpixel-offset-accumulation-clipping-expected.html: Added.
        * compositing/hidpi-compositing-layer-with-subpixel-offset-accumulation-clipping.html: Added.

2014-06-27  Jer Noble  <jer.noble@apple.com>

        Unreviewed gardening; fix whitespace issues in the W3C Media Source expected results.

        * http/tests/media/media-source/mediasource-addsourcebuffer-expected.txt:
        * http/tests/media/media-source/mediasource-append-buffer-expected.txt:
        * http/tests/media/media-source/mediasource-append-stream-expected.txt:
        * http/tests/media/media-source/mediasource-appendwindow-expected.txt:
        * http/tests/media/media-source/mediasource-buffered-expected.txt:
        * http/tests/media/media-source/mediasource-closed-expected.txt:
        * http/tests/media/media-source/mediasource-config-change-mp4-a-bitrate-expected.txt: